# unified_mcp

./: .dockerignore  .env.example  .gitignore  CUSTOM_SERVERS.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt  run.py  start.sh
src/unified_mcp/: __init__.py  config.py  main.py
tests/: __init__.py
tests/integration/: __init__.py  test_live_server.py
tests/unit/: __init__.py  test_unified_mcp.py
